--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,9 +12,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configura??es adicionais do JPA/Hibernate (opcional)
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 #Configura??es Flyway
-spring.flyway.enabled=false
+spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=false
 spring.flyway.locations=classpath:db/migration
