Implementa envio de sugestões de livros por e-mail

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=backend
+server.port=8090
 
 # URL de conex?o com o banco de dados
-spring.datasource.url=jdbc:postgresql://localhost:5432/backend
+spring.datasource.url=jdbc:postgresql://localhost:5432/biblioteca_virtual
 
 # Nome de usu?rio e senha do banco de dados
 spring.datasource.username=postgres
@@ -12,9 +13,17 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configura??es adicionais do JPA/Hibernate (opcional)
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 #Configura??es Flyway
-spring.flyway.enabled=true
+spring.flyway.enabled=false
 spring.flyway.baseline-on-migrate=false
 spring.flyway.locations=classpath:db/migration
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=bibliotecavirtualteste@gmail.com
+spring.mail.password=rfmk wndi belj qlit
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.protocol=smtp
